c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/malformed_array_declarator.c
int main(void) {
    int foo[[10]];
    return 0;
}